# Watermill

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/: imgui.ini  toMipmap.ipynb
assets/levels/: Level1.json  Level2.json  level1.json  level3.json
assets/models/lowpoly_farm_and_mill/: license.txt  scene.gltf
assets/shaders/border_pipeline/: BorderPipeline.frag.spv  BorderPipeline.vert.spv
assets/shaders/grid_pipeline/: GridPipeline.frag.hlsl  GridPipeline.frag.hlsl.spv  GridPipeline.frag.spv  GridPipeline.vert.hlsl  GridPipeline.vert.spv
assets/shaders/image_pipeline/: ImagePipeline.frag.hlsl  ImagePipeline.frag.spv  ImagePipeline.vert.hlsl  ImagePipeline.vert.spv
assets/shaders/solid_fill_pipeline/: SolidFillPipeline.frag.spv  SolidFillPipeline.vert.spv
assets/shaders/sprite_pipeline/: SpritePipeline.frag.hlsl  SpritePipeline.frag.spv  SpritePipeline.vert.hlsl  SpritePipeline.vert.spv  SpritePipelineCommon.hlsl
assets/shaders/text_overlay_pipeline/: TextOverlay.frag.spv  TextOverlay.vert.spv
assets/textures/: TokenSpin.ktx2  b-box-t1.ktx2  b-box-t2.ktx2  b-sones-t1-c1.ktx2  b-sones-t1-c2.ktx2  b-sones-t1-c3.ktx2  b-sones-t1-c4.ktx2  b-sones-t1-c5.ktx2  b-sones-t1-c6.ktx2  b-sones-t1-c7.ktx2  b-sones-t2-c1.ktx2  b-sones-t2-c2.ktx2  b-sones-t2-c3.ktx2  b-sones-t2-c4.ktx2  b-sones-t2-c5.ktx2  b-sones-t2-c6.ktx2  b-sones-t2-c7.ktx2  b-sones-t3-c1.ktx2  b-sones-t3-c2.ktx2  b-sones-t3-c3.ktx2  b-sones-t3-c4.ktx2  b-sones-t3-c5.ktx2  b-sones-t3-c6.ktx2  b-sones-t3-c7.ktx2  b-sones-t4-c1.ktx2  b-sones-t4-c2.ktx2  b-sones-t4-c3.ktx2  b-sones-t4-c4.ktx2  b-sones-t4-c5.ktx2  b-sones-t4-c6.ktx2  b-sones-t4-c7.ktx2  b-sones-t5-c1.ktx2  b-sones-t5-c2.ktx2  b-sones-t5-c3.ktx2  b-sones-t5-c4.ktx2  b-sones-t5-c5.ktx2  b-sones-t5-c6.ktx2  b-sones-t5-c7.ktx2  barrel-pomp-c1.ktx2  barrel-pomp-c2.ktx2  (+1356 more)
assets/ui/game/: Game.css  Game.html
assets/ui/level1/: Game.html
assets/ui/level2/: Game.html
assets/ui/level3/: Game.html
assets/ui/menu/: Menu.css  Menu.html
assets/ui/scoreboard/: Scoreboard.css  Scoreboard.html
engine/asset_system/: AssetTexture.cpp  AssetTexture.hpp  CMakeLists.txt
engine/bedrock/: BedrockCommon.hpp  BedrockDeffer.cpp  BedrockDeffer.hpp  BedrockMath.cpp  BedrockMath.hpp  BedrockMemory.hpp  BedrockPath.cpp  BedrockPath.hpp  BedrockString.hpp  CMakeLists.txt
engine/entity_system/: CMakeLists.txt  Transform.cpp  Transform.hpp
engine/importer/: CMakeLists.txt  ImportTexture.cpp  ImportTexture.hpp  JsonUtils.hpp
engine/job_system/: JobSystem.cpp  JobSystem.hpp  ScopeLock.cpp  ScopeLock.hpp  ScopeProfiler.hpp  ThreadPool.cpp  ThreadPool.hpp  ThreadSafeQueue.hpp
engine/libs/glm/: CMakeLists.txt
engine/libs/glm/glm/detail/: type_half.inl
engine/libs/imgui/: CMakeLists.txt  imgui_impl_vulkan.cpp
engine/libs/implot/: CMakeLists.txt
engine/libs/libconfig/: CMakeLists.txt  LibConfig.cpp
engine/render_system/: BufferTracker.cpp  BufferTracker.hpp  CMakeLists.txt  LogicalDevice.cpp  LogicalDevice.hpp  RenderBackend.cpp  RenderBackend.hpp  RenderTypes.cpp  RenderTypes.hpp  UI.cpp  UI.hpp
engine/render_system/camera/: ArcballCamera.cpp  ArcballCamera.hpp  ObserverCamera.cpp  ObserverCamera.hpp  PerspectiveCamera.cpp  PerspectiveCamera.hpp
engine/render_system/pipeline/: IShadingPipeline.hpp
engine/render_system/render_resource/: SwapChainRenderResource.hpp
engine/time_system/: CMakeLists.txt  Time.cpp  Time.hpp
executables/default/: Buffers.cpp  CMakeLists.txt  DefaultMain.cpp  EditorApp.cpp  EditorApp.hpp  GridRenderer.cpp  SceneRenderResource.cpp  ShapeGenerator.hpp
executables/time_shift/: CMakeLists.txt  GameScene.cpp  GameScene.hpp  GenerateGame.cpp  GenerateGame.h  IScene.hpp  LevelParser.cpp  LevelParser.hpp  MenuScene.cpp  MenuScene.hpp  PatrolEnemy.cpp  PatrolEnemy.hpp  ResourceManager.cpp  ResourceManager.hpp  ScoreboardScene.cpp  ScoreboardScene.hpp  SpritePipeline.cpp  SpritePipeline.hpp  SpriteRenderer.cpp  SpriteRenderer.hpp  TimeShiftApp.cpp  TimeShiftApp.hpp  TimeShiftMain.cpp
shared/: Buffers.hpp  CMakeLists.txt  GridPipeline.cpp  GridPipeline.hpp  GridRenderer.cpp  GridRenderer.hpp  SceneFrameBuffer.cpp  SceneFrameBuffer.hpp  SceneRenderPass.cpp  SceneRenderPass.hpp  SceneRenderResource.hpp  ShapeGenerator.cpp
webview/: CMakeLists.txt  WebViewContainer.cpp  WebViewContainer.hpp
webview/litehtml/include/litehtml/: document.h  el_text.h
webview/litehtml/src/: document.cpp
webview/litehtml/src/gumbo/include/: gumbo.h
webview/renderer/: BorderPipeline.cpp  BorderRenderer.cpp  BorderRenderer.hpp  ConsolasFontRenderer.cpp  ConsolasFontRenderer.hpp  CustomFontRenderer.cpp  CustomFontRenderer.hpp  ImagePipeline.cpp  ImagePipeline.hpp  ImageRenderer.cpp  ImageRenderer.hpp  SolidFillPipeline.cpp  SolidFillRenderer.cpp  SolidFillRenderer.hpp  TextOverlayPipeline.cpp  TextOverlayPipeline.hpp
