########################################

set(EXECUTABLE "Default")

list(
    APPEND EXECUTABLE_RESOURCES
    "${CMAKE_CURRENT_SOURCE_DIR}/DefaultMain.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/SceneRenderPass.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/SceneRenderPass.hpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/SceneRenderResource.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/SceneRenderResource.hpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/SceneFrameBuffer.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/SceneFrameBuffer.hpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/GridPipeline.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/GridPipeline.hpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/GridRenderer.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/GridRenderer.hpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/EditorApp.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/EditorApp.hpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Buffers.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/Buffers.hpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/ShapeGenerator.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/ShapeGenerator.hpp"
)

add_executable(${EXECUTABLE} ${EXECUTABLE_RESOURCES})

########################################